feat: implement Tencent Cloud COS storage for image uploads, add author update API, and enhance sitemap generation